[package]
name = "rplaid"
version = "0.4.0"
authors = ["Allan Calix <allan@acx.dev>"]
edition = "2021"
description = """
An async client library for Plaid APIs.
"""
homepage = "https://github.com/allancalix/rplaid"
documentation = "https://docs.rs/rplaid"
repository = "https://github.com/allancalix/rplaid"
readme = "README.md"
keywords = ["plaid", "api", "client", "async", "finance"]
categories = ["api-bindings"]
exclude = ["/.github/*"]
license = "MIT"

[features]
default = ["streams"]
streams = ["async-stream", "futures-core", "futures-util"]
decimal = ["rust_decimal"]

[dependencies]
async-stream = { version = "0.3.2", optional = true }
futures-core = { version = "0.3.17", optional = true }
futures-util = { version = "0.3.17", optional = true }
hyper = { version = "0.14", default-fatures = false, features = ["client", "http1"] }
hyper-tls = "0.5"
rust_decimal = { version = "1.26", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
insta = { version = "1.19", features = ["redactions", "json"] }
tokio = { version = "1.20", default-features = false, features = ["macros", "test-util", "rt-multi-thread"] }
