[package]
name = "rplaid"
version = "0.5.0-alpha.1"
authors = ["Allan Calix <allan@acx.dev>"]
edition = "2021"
description = """
An async client library for Plaid APIs.
"""
homepage = "https://github.com/allancalix/rplaid"
documentation = "https://docs.rs/rplaid"
repository = "https://github.com/allancalix/rplaid"
readme = "README.md"
keywords = ["plaid", "api", "client", "async", "finance"]
categories = ["api-bindings"]
exclude = ["/.github/*"]
license = "MIT"

[features]
default = []
decimal = ["rust_decimal"]

[dependencies]
hyper = { version = "0.14", default-features = false, features = [
    "client",
    "http1",
] }
hyper-tls = "0.5"
rust_decimal = { version = "1.34", optional = true }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
insta = { version = "1.34", default-features = false, features = [
    "redactions",
    "json",
] }
tokio = { version = "1.36", default-features = false, features = [
    "macros",
    "test-util",
] }
